@@ -16,7 +16,7 @@ To build
 3. Get and install erlang-rfc4627
    http://www.lshift.net/blog/2007/02/17/json-and-json-rpc-for-erlang
    *OR*
-   http://github.com/norton/erlang-rfc4627 *OR*   
+   http://github.com/norton/erlang-rfc4627
 
 4. Change to the src directory and type make
    $ cd src
