@@ -1,4 +1,5 @@
 -module(ubf_jsonrpc_stateless_plugin).
+-behavior(ubf_plugin_stateless).
 
 -include("ubf.hrl").
 
